--- a/project1/images/index.html
+++ b/project1/images/index.html
@@ -3,6 +3,24 @@
     <head>
         <title>Hello World!</title>
         <meta charset="utf-8">
+        <style>
+            html {
+                background-color: #024029;
+            }
+
+            body {
+                width: 1200px;
+                margin: 20px auto;
+                padding: 20px;
+                border: 4px solid #000;
+                background-color: white;
+                text-align: center;
+            }
+
+            h1 {
+                font-size: 60px;
+            }
+        </style>
     </head>
 
     <body>
